--- a/todo-app/docker-compose.dev.yml
+++ b/todo-app/docker-compose.dev.yml
@@ -6,10 +6,9 @@ services:
       dockerfile: ./todo-frontend/dev.Dockerfile # This will simply tell which dockerfile to read
     volumes:
       - ./todo-frontend/:/usr/src/app/todo-frontend # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
-    ports:
-      - 5173:5173
     container_name: hello-front-dev # This will name the container hello-front-dev
-    
+    environment:
+      - VITE_BACKEND_URL=http://localhost:8080/api
   debug-helper:
     image: busybox
   server:
@@ -19,8 +18,6 @@ services:
       dockerfile: ./todo-backend/dev.Dockerfile # This will simply tell which dockerfile to read
     volumes:
       - ./todo-backend/:/usr/src/app # The path can be relative, so ./ is enough to say "the same location as the docker-compose.yml"
-    ports:
-      - 3000:3000
     container_name: todo-server # This will name the container hello-front-dev
     environment: 
       - MONGO_URL=mongodb://the_username:the_password@mongodb:27017/the_database
