--- a/todo-app/nginx.dev.conf
+++ b/todo-app/nginx.dev.conf
@@ -17,7 +17,10 @@ http {
       proxy_pass http://app:5173;
     }
     location /api/ {
-      proxy_pass http://todo-server:3000
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_pass http://server:3000/;
     }
   }
 }
