--- a/todo-app/todo-backend/dockerfile
+++ b/todo-app/todo-backend/dockerfile
@@ -1,8 +1,8 @@
 FROM node:20
   
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/todo-backend
 
-COPY --chown=node:node . .
+COPY --chown=node:node ./todo-backend .
 
 RUN npm ci 
 
