--- a/todo-app/todo-frontend/dockerfile
+++ b/todo-app/todo-frontend/dockerfile
@@ -1,10 +1,10 @@
 FROM node:20 AS build-stage 
 
-WORKDIR /usr/src/app
+WORKDIR /usr/src/app/todo-frontend
 
-ENV VITE_BACKEND_URL="http://localhost:3000/"
+COPY ./todo-frontend .
 
-COPY . .
+ENV VITE_BACKEND_URL="http://localhost:8080/api"
 
 RUN npm ci
 
@@ -20,4 +20,4 @@ CMD ["serve", "dist"]
 
 FROM nginx:1.25-alpine
 
-COPY --from=build-stage /usr/src/app/dist /usr/share/nginx/html
+COPY --from=build-stage /usr/src/app/todo-frontend/dist /usr/share/nginx/html
